--- a/src/core/styles/globals.css
+++ b/src/core/styles/globals.css
@@ -58,8 +58,8 @@
     }
 
     .dark {
-        --background: hsl(268, 58%, 7%);
-        --foreground: hsl(0 0% 100%);
+        --background: hsl(180, 3%, 94%);
+        --foreground: hsl(255 13% 12%);
         --card: hsl(269 30% 14%);
         --card-primary: hsl(266, 30%, 14%);
         --card-accent: hsl(260, 82%, 67%);
@@ -86,13 +86,13 @@
         --chart-3: hsl(30 80% 55%);
         --chart-4: hsl(280 65% 60%);
         --chart-5: hsl(340 75% 55%);
-        --sidebar-background: hsl(240 5.9% 10%);
+        --sidebar-background: hsl(169, 63%, 8%);
         --sidebar-foreground: hsl(240 4.8% 95.9%);
         --sidebar-primary: hsl(224.3 76.3% 48%);
-        --sidebar-primary-foreground: hsl(0 0% 100%);
-        --sidebar-accent: hsl(240 3.7% 15.9%);
-        --sidebar-accent-foreground: hsl(240 4.8% 95.9%);
-        --sidebar-border: hsl(240 3.7% 15.9%);
+        --sidebar-primary-foreground: hsl(160 5% 87%);
+        --sidebar-accent: hsl(169, 63%, 8%);
+        --sidebar-accent-foreground: hsl(79, 47%, 51%);
+        --sidebar-border: hsl(169, 63%, 8%);
         --sidebar-ring: hsl(217.2 91.2% 59.8%);
 
         /* Custom variables */
